--- a/dashboard/screen/user/project.html
+++ b/dashboard/screen/user/project.html
@@ -14,18 +14,8 @@
     ></script>
   </head>
   <body>
-    <div id="navbar">
-      <div id="user">
-        <img src="../assets/User-Icon.png" id="img" />
-      </div>
-
-      <div id="axiom">
-        <img src="../assets/axiom_main (1).png" id="axiom-img" />
-      </div>
-      <ul>
-        <li id="dashboard">Dashboard</li>
-        <a href="../project/project.html"><li>Project</li></a>
-      </ul>
+    <div id="test">
+      <button onclick="one()">click</button>
     </div>
     <div id="container">
       <div class="div">
