--- a/dashboard/map/map.html
+++ b/dashboard/map/map.html
@@ -41,7 +41,7 @@
     <script src="./map.js"></script>
   </head>
 
-  <body>
+  <body onload="rel()">
   
       <div id="viewDiv"></div>
       <div id="measurements"></div>
