--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -147,11 +147,7 @@
         </div> -->
       </div>
       <div id="container">
-        <iframe
-          src="../dashboard/map/map.html"
-          frameborder="0"
-          id="ifm"
-        ></iframe>
+        <iframe src="" frameborder="0" id="ifm"></iframe>
       </div>
     </div>
 
@@ -161,7 +157,8 @@
           <div id="container-icon">
             <img src="" alt="" />
           </div>
-          <p id="userName">rithi</p>
+          <p id="userName"></p>
+          <button onclick="logOut()">LogOut</button>
         </div>
       </div>
     </div>
