--- a/dashboard/user/project.html
+++ b/dashboard/user/project.html
@@ -23,8 +23,8 @@
   <body>
     <div id="project_nav">
       <h3>Projects</h3>
-      <a href="./newproject.html" target="_blank">
-        <button id="btn" onclick="create()">
+      <a href="./newproject.html" target="_top">
+        <button id="btn">
           Create <i class="fas fa-long-arrow-alt-right"></i></button
       ></a>
     </div>
