export and import

--- a/map/index.html
+++ b/map/index.html
@@ -68,6 +68,10 @@
       </div>
     </div>
     <div class="dropdown2">
+      <button class="dropbtn">import</button>
+      <div id="dataImport"></div>
+    </div>
+    <div class="dropdown3">
       <button class="dropbtn" onclick="expt()">Save</button>
     </div>
     <calcite-panel heading="SketchViewModel Styler" id="propPanel">
